# vibe-video

./: .env.example  .gitignore  README.md  SKILL.md  install.md  poster.html  pyproject.toml
helpers/: broll_slots.py  build_edl.py  grade.py  live_monitor.py  render.py  template_wizard.py  templates.py  timeline_view.py  track_speaker.py  transcribe.py  transcribe_batch.py  verify_render.py
skills/manim-video/: SKILL.md
templates/: horizontal-best-moments.json  speaker-vertical.json  vertical-gameplay-facecam.json  vertical-vlog-blur-bg.json
tests/: test_broll_slots.py  test_build_edl.py  test_live_monitor.py  test_templates.py  test_timeline_view.py  test_track_speaker.py  test_transcribe.py  test_verify_render.py
