[project]
name = "vibe-video"
version = "0.1.0"
description = "Conversation-driven video editor skill for Claude Code"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests",
    "librosa",
    "matplotlib",
    "pillow",
    "numpy",
    "faster-whisper",
    "ultralytics",
    "opencv-python",
    "mediapipe",
    "torch",
    "torchvision",
]

[project.optional-dependencies]
animations = ["manim"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
